--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   <display-name>roomProJect</display-name>
   <resource-ref>
     <description>Board Connection</description>
-    <res-ref-name>jdbc:BoardDB</res-ref-name>
+    <res-ref-name>jdbc:OracleDB</res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
