--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//WebContent/admin.jsp=UTF-8
+encoding//WebContent/memberinfo.jsp=UTF-8
 encoding//WebContent/serachmap.jsp=UTF-8
 encoding//WebContent/test2.jsp=UTF-8
